tests/ui/nll/issue-55401.stderr
error: lifetime may not live long enough
  --> $DIR/issue-55401.rs:3:5
   |
LL | fn static_to_a_to_static_through_ref_in_tuple<'a>(x: &'a u32) -> &'static u32 {
   |                                               -- lifetime `'a` defined here
LL |     let (ref y, _z): (&'a u32, u32) = (&22, 44);
LL |     *y
   |     ^^ returning this value requires that `'a` must outlive `'static`

error: aborting due to 1 previous error

